clusters/home/apps/media/sonarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`sonarr.home.arpa`)
      services:
        - name: sonarr
          port: 80
